Add tooltip to edit/delete btns | Update new concert page

--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -32,7 +32,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <%= f.label :show_time, "Concert Time *" %>
+                <%= f.label :show_time, "Concert Time * (e.g., 03:00 PM)" %>
                 <%= f.time_field :show_time, class: 'form-control' %>
               </div>
             </div>
