--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -153,3 +153,15 @@ img {
 .text-faded {
   color: #aaa;
 }
+
+.hover-link {
+  a {
+    color: #fff;
+    -webkit-transition: color .15s ease-in-out;
+    transition: color .15s ease-in-out;
+
+    &:hover {
+      color: #DF691A;
+    }
+  }
+}
