--- a/app/views/concerts/_table.html.erb
+++ b/app/views/concerts/_table.html.erb
@@ -14,10 +14,10 @@
       <td><i class="fa fa-bookmark" aria-hidden="true"></i> <%= concert.bookmarks.count %></td>
       <% if user_is_authorized?(concert) %>
         <td class="text-left">
-          <%= link_to edit_user_concert_path(concert.user, concert) do %>
+          <%= link_to edit_user_concert_path(concert.user, concert), data: {toggle: "tooltip", placement: "top"}, title: "Edit" do %>
             <i class="fa fa-pencil-square-o fa-lg"></i>
           <% end %>
-          <%= link_to [concert.user, concert], method: :delete, data: { confirm: 'Are you sure to delete this concert information?' } do %>
+          <%= link_to [concert.user, concert], method: :delete, data: {confirm: 'Are you sure to delete this concert information?', toggle: "tooltip", placement: "top"}, title: "Delete" do %>
             <i class="fa fa-trash-o fa-lg"></i>
           <% end %>
         </td>
