--- a/app/views/concerts/new.html.erb
+++ b/app/views/concerts/new.html.erb
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <div class="page-header">
-      <h3 class="text-center">Add New Concert</h3>
+    <div class="page-header text-center">
+      <h3>Add New Concert</h3>
+      <p class="text-faded">Enter your concert information. You can edit the information in your user page.</p>
     </div>
 
     <%= render 'form' %>
