Update musician list, concert list and navbar dropdown list

--- a/app/views/welcome/concert_list.html.erb
+++ b/app/views/welcome/concert_list.html.erb
@@ -1,8 +1,9 @@
 <% @title = "Musicians | Discover new music" %>
 <div id="concert-list" class="row">
   <div class="col-md-10 col-md-offset-1">
-    <div class="page-header">
-      <h2 class="text-center">Concerts</h2>
+    <div class="page-header text-center">
+      <h2>Concerts</h2>
+      <p class="text-faded">Check out our concerts. Click the concert name and learn more about it.</p>
     </div>
     <div class="text-right" style="color: #7C8792; margin-bottom: 10px;">
       <small><i class="fa fa-bookmark" aria-hidden="true"></i> bookmarks </small>
