--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -44,13 +44,13 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Inbox", mailbox_inbox_path %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to 'Saved Musicians', user_profiles_path(current_user) %></li>
-              <li><%= link_to 'Saved Concerts', user_concerts_path(current_user) %></li>
+              <li><%= link_to 'See Saved Musicians', user_profiles_path(current_user) %></li>
+              <li><%= link_to 'See Saved Concerts', user_concerts_path(current_user) %></li>
               <li role="separator" class="divider"></li>
               <% if user_profile && user_profile.id %>
-                <li><%= link_to 'My Musician Profile', [current_user, user_profile] %></li>
+                <li><%= link_to 'Edit My Musician Profile', [current_user, user_profile] %></li>
               <% else %>
-                <li><%= link_to 'New Musician Profile', new_user_profile_path(current_user) %></li>
+                <li><%= link_to 'Create New Musician Profile', new_user_profile_path(current_user) %></li>
               <% end %>
               <% if premium_or_admin?(current_user) %>
                 <li><%= link_to 'Upload My Music', user_songs_path(current_user), class: "list-group-item" %></li>
