--- a/app/views/welcome/musician_list.html.erb
+++ b/app/views/welcome/musician_list.html.erb
@@ -1,8 +1,9 @@
 <% @title = "Musicians | Discover new music" %>
 <div id="musician-list" class="row">
   <div class="col-md-6 col-md-offset-3">
-    <div class="page-header">
-      <h2 class="text-center">Musicians</h2>
+    <div class="page-header text-center">
+      <h2>Musicians</h2>
+      <p class="text-faded">Check out our musicians. Click the username and learn more about them!</p>
     </div>
     <div class="text-right" style="color: #7C8792;">
       <small><i class="fa fa-music" aria-hidden="true"></i> concerts </small> |
