Add github url to greeting

--- a/app/views/welcome/_greeting.html.erb
+++ b/app/views/welcome/_greeting.html.erb
@@ -4,6 +4,7 @@
       <div class="col-xs-12">
         <h3>Wecolme to MusicApp</h3>
         <p>Music app is a production quality app that allows users to search local concerts and discover new musicians. Musicians can post their local concerts and songs to public.</p>
+        <p>To see source code, visit at <a href="https://github.com/ghbooth12/music_app" target="_blank">GitHub</a>.</p>
 
         <div class="well text-center">
           <p>To see in action, you can use test user account to log in.</p>
